# public/docs/openapi.json
@@ -97,9 +97,9 @@
     },
     "/v1/student/name": {
       "post": {
-        "summary": "Set Student Name",
-        "description": "Sets the student name and surname (mock action).",
-        "operationId": "setStudentName",
+        "summary": "Set Student Information",
+        "description": "Sets the student name and lastname (mock action).",
+        "operationId": "setStudent",
         "security": [
           {
             "apiKey": []
@@ -123,16 +123,16 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "ad": {
+                  "name": {
                     "type": "string"
                   },
-                  "soyad": {
+                  "lastname": {
                     "type": "string"
                   }
                 },
                 "required": [
-                  "ad",
-                  "soyad"
+                  "name",
+                  "lastname"
                 ]
               }
             }
@@ -145,6 +145,16 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ApiResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Validation failed or Student ID missing",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
                 }
               }
             }
